# advent_2024

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  wip.py
days/: Makefile
days/01/: part1.py  part2.py
days/02/: part1.py  part2.py
days/03/: part1.py  part2.py
days/04/: part1.py  part2.py
days/05/: part1.py  part2.py
days/06/: part1.py  part2.py
days/07/: part1.py  part2.py
days/08/: part1.py  part2.py
days/09/: part1.py  part2.py
days/10/: part1.py  part2.py
days/11/: part1.py  part2.py
days/12/: part1.py  part2.py
days/13/: part1.py  part2.py
days/14/: day14_part2.ipynb  part1.py  part2.py
days/15/: part1.py  part2.py
days/16/: part1.py  part2.py
days/17/: part1.py  part2.py
days/18/: part1.py  part2.py
days/19/: part1.py  part2.py
days/20/: part1.py  part2.py
days/21/: part1.py  part2.py
days/22/: part1.py  part2.py
days/23/: part1.py  part2.py
days/24/: part1.py
days/25/: part1.py
