[project]
name = "advent-2024"
version = "0.1.0"
description = "My solutions for advent of code 2024"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "icecream>=2.1.3",
    "ipykernel>=6.29.5",
    "nodeenv>=1.9.1",
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "parse>=1.20.2",
    "pytest>=8.3.3",
]

[tool.uv]
    reinstall-package = ["advent_2024"]

[tool.ruff]
    fix = true
    target-version = "py313"

[tool.ruff.lint]
    select = ["E", "F", "I", "UP", "ERA", "C", "RUF", "PLC", "PLE", "PLR", "PLW", "A",  "RET", ]
    ignore = [
        "PLR2004", # there are a lot of "magic numbers" in aoc
        "E501", # line too long
    ]

[tool.ruff.lint.per-file-ignores]
    "wip.py" = [ "F401" ]
